--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ruhit's Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ruhit's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <section class="top-banner">
+      <div class="half-width">
+        <h1>
+          Welcome To
+          <span class="holud-garo"><br />Ruhit Been Siddik</span> World!
+        </h1>
+        <h3>I'm a Baby Web Developer</h3>
+        <p>
+          Hello,this is ruhit. A baby web Developer from bangladesh. I am
+          learning development from <b>Programming Hero.</b> I believe I will be
+          a good developer soon. For this, I have to work hard and I'm ready for
+          this. Please,pray for me.
+        </p>
+        <a class="hire-button" target="_blank" href="https://www.facebook.com/ruhitbeensiddiq/">HIRE ME</a>
+      </div>
+      <div class="half-width">
+        <img
+          src="developer-portfolio-master/developer-portfolio-master/images/ruhits1stimage.png"
+          alt="rhits-image"
+        />
+      </div>
+    </section>
+  </body>
 </html>
