--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
           a good developer soon. For this, I have to work hard and I'm ready for
           this. Please,pray for me.
         </p>
-        <a class="hire-button" target="_blank" href="https://www.facebook.com/ruhitbeensiddiq/">HIRE ME</a>
+        <a
+          class="hire-button"
+          target="_blank"
+          href="https://www.facebook.com/ruhitbeensiddiq/"
+          >HIRE ME</a
+        >
       </div>
       <div class="half-width">
         <img
@@ -36,5 +41,32 @@
         />
       </div>
     </section>
+
+    <section class="dream-big">
+      <div class="half-width secondimg">
+        <img
+          src="developer-portfolio-master/developer-portfolio-master/images/ruhits2ndimage.png"
+          alt="ruhits2ndimage"
+        />
+      </div>
+      <div class="half-width second">
+        <h2>Dream Big</h2>
+        <h3>Become a full stack developer</h3>
+        <p>
+          I already learned the basic HTML and CSS. I can build any simple
+          website. I can even teach my grandma how to make simple website. My
+          goal is to build 3 websites and learn advanced topics.
+        </p>
+        <a
+          class="hire-two"
+          href="http://www.facebook.com/ruhitbeensiddiq/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >GO MY FB PROFILE</a
+        >
+      </div>
+    </section>
+
+    <section class="experience-area"></section>
   </body>
 </html>
