--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
       <div class="half-width">
         <h1>
           Welcome To
@@ -42,7 +42,7 @@
       </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
       <div class="half-width secondimg">
         <img
           src="developer-portfolio-master/developer-portfolio-master/images/ruhits2ndimage.png"
@@ -67,6 +67,24 @@
       </div>
     </section>
 
-    <section class="experience-area"></section>
+    <section class="experience-area">
+      <h1>experiences</h1>
+      <div class="flexible-container">
+        <div id="border-left1" class="box-shadow ">
+          <h1>Full Stack Developer</h1>
+          <h3 class="holud-garo">2022-Present | Pro Level Developer</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident tenetur sed voluptates doloribus illo ducimus vel harum enim, expedita eius eos, laudantium facere fuga rerum quibusdam ipsam, voluptatibus minus accusantium.</p>
+        </div>
+        
+        <div id="border-left" class="box-shadow">
+          <h1>Baby Web Developer</h1>
+          <h3 class="holud-garo" >2021-Programming Hero Learner</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate corporis officia exercitationem consequuntur, quos necessitatibus, rem itaque numquam temporibus earum sapiente vel nesciunt possimus facere fugiat quas quaerat ipsam? Optio.</p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p>@ Ruhit Been Siddik, a baby web developer</p>
+    </footer>
   </body>
 </html>
